--- a/src/components/carousel/carousel.module.css
+++ b/src/components/carousel/carousel.module.css
@@ -1,3 +1,7 @@
 .carousel {
-  @apply w-full overflow-hidden lg:mt-8;
+  @apply h-56 w-full rounded-md md:h-72 lg:mt-8 lg:h-96;
+}
+
+.carousel-item {
+  @apply rounded-md;
 }
