--- a/src/components/card-game/card-game.module.css
+++ b/src/components/card-game/card-game.module.css
@@ -1,15 +1,15 @@
 .card-game {
-  @apply rounded-lg bg-emerald-400 p-2 md:w-48;
+  @apply rounded-lg bg-emerald-400 p-2 transition-all duration-150 hover:shadow-lg;
 }
 
 .card-game-img-wrapper {
-  @apply relative h-36 w-36 overflow-hidden rounded-lg md:h-44 md:w-44;
+  @apply relative aspect-square w-full overflow-hidden rounded-lg;
 }
 
 .card-game-img {
-  @apply h-36 w-36 md:h-44 md:w-44;
+  @apply h-full w-full object-contain;
 }
 
 .card-game-title {
-  @apply mt-4 text-center text-sm font-semibold text-black md:text-base;
+  @apply mt-2 text-center text-sm font-semibold text-black md:mt-4 md:text-base;
 }
