--- a/src/components/card-game/card-game.module.css
+++ b/src/components/card-game/card-game.module.css
@@ -1,5 +1,5 @@
 .card-game {
-  @apply rounded-lg bg-emerald-400 p-2 transition-all duration-150 hover:shadow-lg;
+  @apply rounded-lg bg-primary-2 p-2 transition-all duration-150 hover:shadow-lg;
 }
 
 .card-game-img-wrapper {
