--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -1,7 +1,11 @@
+.layout-wrapper {
+  @apply flex min-h-screen flex-col;
+}
+
 .main-wrapper {
-  @apply min-h-screen bg-emerald-100 pt-36 md:pt-28;
+  @apply flex-1 bg-primary-1 pb-6 pt-36 md:pt-28 lg:pb-8 lg:pt-28;
 }
 
 .content-wrapper {
-  @apply container mx-auto px-4 md:px-8;
+  @apply mx-auto px-4 md:px-8;
 }
