--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -3,9 +3,9 @@
 }
 
 .main-wrapper {
-  @apply flex-1 bg-primary-1 pb-6 pt-36 md:pt-28 lg:pb-8 lg:pt-28;
+  @apply flex-1 bg-primary-1;
 }
 
 .content-wrapper {
-  @apply mx-auto px-4 md:px-8;
+  @apply container mx-auto px-4 pb-6 pt-36 md:px-8 md:pt-20 lg:pb-8 lg:pt-28;
 }
