--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -7,5 +7,5 @@
 }
 
 .content-wrapper {
-  @apply container mx-auto px-4 pb-6 pt-36 md:px-8 md:pt-20 lg:pb-8 lg:pt-32;
+  @apply container mx-auto px-4 pb-6 pt-36 md:px-4 md:pt-24 lg:px-8 lg:pb-8 lg:pt-32;
 }
