--- a/src/components/carousel/carousel.module.css
+++ b/src/components/carousel/carousel.module.css
@@ -1,9 +1,24 @@
 .carousel {
-  @apply z-40 h-56 w-full rounded-md md:h-72 lg:mt-4 lg:h-96;
-  --swiper-navigation-color: #5ebf39;
-  --swiper-pagination-color: #5ebf39;
+  @apply overflow-hidden lg:mt-4;
+}
+
+.carousel-container {
+  @apply flex;
 }
 
 .carousel-item {
-  @apply rounded-md;
+  @apply relative mx-2 h-56 md:h-72 lg:h-96;
+  flex: 0 0 100%;
+}
+
+.carousel-item > img {
+  @apply rounded-lg object-fill;
+}
+
+.carousel-prev {
+  @apply absolute inset-y-0 left-4 z-50 text-white;
+}
+
+.carousel-next {
+  @apply absolute inset-y-0 right-4 z-50 text-white;
 }
